# my-portfolio

./: .gitignore  Cargo.toml  dx.toml  index.html  package-lock.json  package.json  projects.toml  tailwind-built.css  tailwind.config.js
.github/workflows/: deploy.yml
assets/: styles.css
public/: tailwind-built.css  tailwind.css
src/: input.css  main.rs
